(test用コードの整理・最適化)

--- a/tests/testdata/htdocs/index.html
+++ b/tests/testdata/htdocs/index.html
@@ -11,13 +11,14 @@
 		<div class="canvas" data-broccoli-preview="http://127.0.0.1:8088/editpage/index.html"></div>
 		<div class="palette">...</div>
 		<div class="instancePathView">...</div>
-		<div>
+		<div class="test_funcs">
 			<ul>
 				<li><a href="javascript:window.main.broccoli.historyBack(function(){alert('history Back done.');});">history Back</a></li>
 				<li><a href="javascript:window.main.broccoli.historyGo(function(){alert('history Go done.');});">history Go</a></li>
 				<li><a href="javascript:window.main.broccoli.copy(function(){alert('copy done.');});">copy</a></li>
 				<li><a href="javascript:window.main.broccoli.paste(function(){alert('paste done.');});">paste</a></li>
 				<li><a href="javascript:window.main.broccoli.remove(function(){alert('remove done.');});">remove</a></li>
+				<li><a href="javascript:alert(window.main.broccoli.getSelectedInstance());">getSelectedInstance</a></li>
 			</ul>
 		</div>
 
