レンダリングされたプレビュー画面中にあるa要素とform要素の動作を無効化する処理を追加

--- a/tests/testdata/htdocs/editpage/index.html
+++ b/tests/testdata/htdocs/editpage/index.html
@@ -485,6 +485,12 @@ moduleフィールドを追加。<code>input type:module</code> は廃止。</p>
 <!-- /.unit --></div>
 
         </div><!-- /secondly -->
+        <footer>
+            <a href="/editpage/">top</a>
+            <form action="javascript:alert('form submit done.');">
+                <input type="submit" value="submit!" />
+            </form>
+        </footer>
     </body>
 </html>
 <script data-broccoli-receive-message="yes">
