--- a/tests/testdata/htdocs/editpage/index.html
+++ b/tests/testdata/htdocs/editpage/index.html
@@ -486,7 +486,7 @@ moduleフィールドを追加。<code>input type:module</code> は廃止。</p>
 
         </div><!-- /secondly -->
         <footer>
-            <a href="/editpage/">top</a>
+            <a href="/editpage/">top</a>, <a href="http://www.pxt.jp/" target="_blank">pxt</a>
             <form action="javascript:alert('form submit done.');">
                 <input type="submit" value="submit!" />
             </form>
