isSingleRootElement の評価式で、複数行に渡るブロックコメントを削除できず判定を誤る不具合を修正

--- a/tests/testdata/htdocs/test2/index.canvas.html
+++ b/tests/testdata/htdocs/test2/index.canvas.html
@@ -271,26 +271,26 @@ moduleフィールドを追加。<code>input type:module</code> は廃止。</p>
 	<ul>
 
 		<li data-broccoli-instance-path="/fields.main@12/fields.loop@0" data-broccoli-sub-mod-name="loop" data-broccoli-area-size-detection="shallow" data-broccoli-module-name="testMod1:dev/float_loop"><p>選択できなければ、編集できません。</p>
-</li>
-
+</li><!--
+		-->
 		<li data-broccoli-instance-path="/fields.main@12/fields.loop@1" data-broccoli-sub-mod-name="loop" data-broccoli-area-size-detection="shallow" data-broccoli-module-name="testMod1:dev/float_loop"><p>リストの順番をドラッグ＆ドロップで入れ替えられます。</p>
-</li>
-
+</li><!--
+		-->
 		<li data-broccoli-instance-path="/fields.main@12/fields.loop@2" data-broccoli-sub-mod-name="loop" data-broccoli-area-size-detection="shallow" data-broccoli-module-name="testMod1:dev/float_loop"><p>ドラッグ＆ドロップで移動させる操作もできるべきです。</p>
-</li>
-
+</li><!--
+		-->
 		<li data-broccoli-instance-path="/fields.main@12/fields.loop@3" data-broccoli-sub-mod-name="loop" data-broccoli-area-size-detection="shallow" data-broccoli-module-name="testMod1:dev/float_loop"><p>領域が重なって表示されるなどの問題があるならば、修正が必要です。</p>
-</li>
-
+</li><!--
+		-->
 		<li data-broccoli-instance-path="/fields.main@12/fields.loop@4" data-broccoli-sub-mod-name="loop" data-broccoli-area-size-detection="shallow" data-broccoli-module-name="testMod1:dev/float_loop"><p>floatされた要素をloopするテストです。</p>
-</li>
-
+</li><!--
+		-->
 		<li data-broccoli-instance-path="/fields.main@12/fields.loop@5" data-broccoli-sub-mod-name="loop" data-broccoli-area-size-detection="shallow" data-broccoli-module-name="testMod1:dev/float_loop"><p>それぞれの要素を編集できるでしょうか？</p>
-</li>
-
+</li><!--
+		-->
 		<li data-broccoli-instance-path="/fields.main@12/fields.loop@6" data-broccoli-sub-mod-name="loop" data-broccoli-area-size-detection="shallow" data-broccoli-module-name="testMod1:dev/float_loop"><p>要素を増やすには、loopフィールドのappenderをダブルクリックします。</p>
-</li>
-<div data-broccoli-instance-path="/fields.main@12/fields.loop@7" data-broccoli-mod-id="testMod1:dev/float_loop" data-broccoli-sub-mod-name="loop" data-broccoli-is-appender="yes" style="overflow:hidden;padding:5px 15px;background-color:#dfe;border:3px solid transparent;border-radius:5px;font-family: &amp;YuGothic&amp;, &amp;Yu Gothic&amp;, Meiryo, &amp;Hiragino Kaku Gothic ProN&amp;, Verdana, sans-serif;font-size:9px;text-align:center;box-sizing:border-box;clear:both;white-space:nowrap;margin:10px 0;">ここをダブルクリックして配列要素を追加してください。</div>
+</li><!--
+		--><div data-broccoli-instance-path="/fields.main@12/fields.loop@7" data-broccoli-mod-id="testMod1:dev/float_loop" data-broccoli-sub-mod-name="loop" data-broccoli-is-appender="yes" style="overflow:hidden;padding:5px 15px;background-color:#dfe;border:3px solid transparent;border-radius:5px;font-family: &amp;YuGothic&amp;, &amp;Yu Gothic&amp;, Meiryo, &amp;Hiragino Kaku Gothic ProN&amp;, Verdana, sans-serif;font-size:9px;text-align:center;box-sizing:border-box;clear:both;white-space:nowrap;margin:10px 0;">ここをダブルクリックして配列要素を追加してください。</div>
 	</ul>
 </div><!-- /.thumb_list -->
 <div class="cols unit" data-broccoli-instance-path="/fields.main@13" data-broccoli-area-size-detection="shallow" data-broccoli-module-name=".cols (3カラム)">
