--- a/tests/testdata/modules1/dev/float_loop/template.html
+++ b/tests/testdata/modules1/dev/float_loop/template.html
@@ -1,7 +1,7 @@
 <div class="dev-float-loop">
 	<ul>
 {&{"loop":{"name":"loop","description":"説明欄は、loopフィールドにもつけられます。"}}&}
-		<li>{&{"input":{"type":"multitext","name":"body","rows":"4","description": "コンテンツを入力してください。"}}&}</li>
-{&"endloop"&}
+		<li>{&{"input":{"type":"multitext","name":"body","rows":"4","description": "コンテンツを入力してください。"}}&}</li><!--
+		-->{&"endloop"&}
 	</ul>
 </div><!-- /.thumb_list -->
