(コミット漏れ)

--- a/tests/testdata/htdocs/test2/index.canvas.html
+++ b/tests/testdata/htdocs/test2/index.canvas.html
@@ -78,6 +78,7 @@ object(0) {
 <li>require に、リポジトリを指定する。</li>
 <li>ディレクトリのパスは <code>./vendor/vendorname/libname/~~~~</code> になるはず。</li>
 </ul>
+<p>長い文字コンテンツ。長い文字コンテンツ。長い文字コンテンツ。長い文字コンテンツ。長い文字コンテンツ。長い文字コンテンツ。長い文字コンテンツ。長い文字コンテンツ。長い文字コンテンツ。長い文字コンテンツ。長い文字コンテンツ。長い文字コンテンツ。長い文字コンテンツ。長い文字コンテンツ。長い文字コンテンツ。長い文字コンテンツ。長い文字コンテンツ。長い文字コンテンツ。長い文字コンテンツ。長い文字コンテンツ。長い文字コンテンツ。長い文字コンテンツ。長い文字コンテンツ。長い文字コンテンツ。</p>
 
 </div><h2 id="-" data-broccoli-instance-path="/fields.main@3/fields.column3@1" data-broccoli-area-size-detection="deep" data-broccoli-module-name="Multi Text">まるちテキストを追加してみました。</h2>
 
@@ -139,7 +140,8 @@ moduleフィールドを追加。<code>input type:module</code> は廃止。</p>
 		<li data-broccoli-instance-path="/fields.main@6/fields.main@0/fields.sample_loop1@0/fields.sample_loop2@0/fields.sample_loop3@0" data-broccoli-sub-mod-name="sample_loop3" data-broccoli-area-size-detection="shallow" data-broccoli-module-name="testMod1:parts/deeploop">loop3:
 			<div><p>だはぁぁぁぁぁ</p>
 </div>
-			<div><span style="color:#999;background-color:#ddd;font-size:10px;padding:0 1em;max-width:100%;overflow:hidden;white-space:nowrap;">(ダブルクリックしてテキストを編集してください)</span></div>
+			<div><p>マルチテキスト3</p>
+</div>
 		</li>
 
 		<li data-broccoli-instance-path="/fields.main@6/fields.main@0/fields.sample_loop1@0/fields.sample_loop2@0/fields.sample_loop3@1" data-broccoli-sub-mod-name="sample_loop3" data-broccoli-area-size-detection="shallow" data-broccoli-module-name="testMod1:parts/deeploop">loop3:
