--- a/tests/testdata/htdocs/test2/index.html
+++ b/tests/testdata/htdocs/test2/index.html
@@ -77,6 +77,7 @@ object(0) {
 <li>require に、リポジトリを指定する。</li>
 <li>ディレクトリのパスは <code>./vendor/vendorname/libname/~~~~</code> になるはず。</li>
 </ul>
+<p>長い文字コンテンツ。長い文字コンテンツ。長い文字コンテンツ。長い文字コンテンツ。長い文字コンテンツ。長い文字コンテンツ。長い文字コンテンツ。長い文字コンテンツ。長い文字コンテンツ。長い文字コンテンツ。長い文字コンテンツ。長い文字コンテンツ。長い文字コンテンツ。長い文字コンテンツ。長い文字コンテンツ。長い文字コンテンツ。長い文字コンテンツ。長い文字コンテンツ。長い文字コンテンツ。長い文字コンテンツ。長い文字コンテンツ。長い文字コンテンツ。長い文字コンテンツ。長い文字コンテンツ。</p>
 
 <h2 id="-">まるちテキストを追加してみました。</h2>
 
@@ -138,7 +139,8 @@ moduleフィールドを追加。<code>input type:module</code> は廃止。</p>
 		<li>loop3:
 			<div><p>だはぁぁぁぁぁ</p>
 </div>
-			<div></div>
+			<div><p>マルチテキスト3</p>
+</div>
 		</li>
 
 		<li>loop3:
