(テストデータ追加)

--- a/tests/testdata/htdocs/editpage/index.html
+++ b/tests/testdata/htdocs/editpage/index.html
@@ -14,28 +14,6 @@
         <h1>sample page</h1>
         <h2>main</h2>
         <div class="contents" data-contents="main">
-<div class="twig_template">
-<h2></h2>
-
-
-<div class="twig_template-include">
-
-</div>
-
-<div class="twig_template-include">
-
-</div>
-
-<div class="twig_template-loop">
-
-object(0) {
-}
-
-
-</div>
-
-
-</div>
 <h2 id="-">デフォルトの値</h2>
 <p>ここを編集してください。</p>
 
@@ -446,6 +424,35 @@ moduleフィールドを追加。<code>input type:module</code> は廃止。</p>
 
 	
 </div><!-- /.attention_box -->
+
+<div class="if">
+
+
+<div class="if--additional-elements"></div>
+
+</div>
+<div class="twig_template">
+<h2></h2>
+
+
+<div class="twig_template-include">
+
+</div>
+
+<div class="twig_template-include">
+
+</div>
+
+<div class="twig_template-loop">
+
+object(0) {
+}
+
+
+</div>
+
+
+</div>
 
         </div><!-- /main -->
         <h2>secondly</h2>
