--- a/tests/testdata/htdocs/test2/index.html
+++ b/tests/testdata/htdocs/test2/index.html
@@ -1,25 +1,3 @@
-<div class="twig_template">
-<h2></h2>
-
-
-<div class="twig_template-include">
-
-</div>
-
-<div class="twig_template-include">
-
-</div>
-
-<div class="twig_template-loop">
-
-object(0) {
-}
-
-
-</div>
-
-
-</div>
 <h2 id="-">デフォルトの値</h2>
 <p>ここを編集してください。</p>
 
@@ -430,3 +408,32 @@ moduleフィールドを追加。<code>input type:module</code> は廃止。</p>
 
 	
 </div><!-- /.attention_box -->
+
+<div class="if">
+
+
+<div class="if--additional-elements"></div>
+
+</div>
+<div class="twig_template">
+<h2></h2>
+
+
+<div class="twig_template-include">
+
+</div>
+
+<div class="twig_template-include">
+
+</div>
+
+<div class="twig_template-loop">
+
+object(0) {
+}
+
+
+</div>
+
+
+</div>
