moduleフィールドをまたいでnamespaceが影響してしまうことがある不具合を修正

--- a/tests/testdata/htdocs/test2/index.html
+++ b/tests/testdata/htdocs/test2/index.html
@@ -410,9 +410,11 @@ moduleフィールドを追加。<code>input type:module</code> は廃止。</p>
 </div><!-- /.attention_box -->
 
 <div class="if">
+<p>うまく行ってますか？？？</p>
 
 
-<div class="if--additional-elements"></div>
+<div class="if--additional-elements"><p>表示されていますか？</p>
+</div>
 
 </div>
 <div class="twig_template">
