--- a/tests/testdata/htdocs/index.html
+++ b/tests/testdata/htdocs/index.html
@@ -28,8 +28,8 @@
 		<!-- socket.io -->
 		<script src="/socket.io/socket.io.js" type="text/javascript"></script>
 
-		<!-- baobab-fw -->
-		<script src="/baobab-fw/baobab-fw.js" type="text/javascript"></script>
+		<!-- biflora -->
+		<script src="/biflora/biflora.js" type="text/javascript"></script>
 
 		<!-- broccoli -->
 		<script src="./libs/broccoli.js"></script>
