editWindow: moduleフィールドとloopフィールドの内容をリスト表示するようになった。
- ダブルクリックすると、編集中のインスタンスを保存し、ダブルクリックしたインスタンスの編集画面を開きます。

--- a/tests/testdata/htdocs/editpage/index.html
+++ b/tests/testdata/htdocs/editpage/index.html
@@ -28,9 +28,11 @@
 
 		<li>loop3:
 			<div><h2 id="multitext-field-">multitext field.</h2>
-<p>multitext.</p>
+<p>multitext. -</p>
 </div>
-			<div></div>
+			<div><p>child.</p>
+
+</div>
 		</li>
 
 		</ul>
