--- a/tests/testdata/htdocs/test2/index.canvas.html
+++ b/tests/testdata/htdocs/test2/index.canvas.html
@@ -12,9 +12,11 @@
 
 		<li data-broccoli-instance-path="/fields.main@1/fields.sample_loop1@0/fields.sample_loop2@0/fields.sample_loop3@0" data-broccoli-sub-mod-name="sample_loop3" data-broccoli-area-size-detection="shallow" data-broccoli-module-name="testMod1:dev/mod_in_loop">loop3:
 			<div><h2 id="multitext-field-">multitext field.</h2>
-<p>multitext.</p>
+<p>multitext. -</p>
 </div>
-			<div><div data-broccoli-instance-path="/fields.main@1/fields.sample_loop1@0/fields.sample_loop2@0/fields.sample_loop3@0/fields.main@0" data-broccoli-mod-id="testMod1:dev/mod_in_loop" data-broccoli-is-appender="yes" style="height:auto;overflow:hidden;padding:9px;background-color:#f9f9ff;border:3px solid transparent;border-radius:5;font-family: &amp;YuGothic&amp;, &amp;Yu Gothic&amp;, Meiryo, &amp;Hiragino Kaku Gothic ProN&amp;, Verdana, sans-serif;font-size:11.2px;color:#000;text-align:center;box-sizing:border-box;clear:both;white-space:nowrap;margin:10px 0;">(+) ここにモジュールをドラッグしてください。</div></div>
+			<div><p data-broccoli-instance-path="/fields.main@1/fields.sample_loop1@0/fields.sample_loop2@0/fields.sample_loop3@0/fields.main@0" data-broccoli-area-size-detection="deep" data-broccoli-module-name="Multi Text">child.</p>
+
+<div data-broccoli-instance-path="/fields.main@1/fields.sample_loop1@0/fields.sample_loop2@0/fields.sample_loop3@0/fields.main@1" data-broccoli-mod-id="testMod1:dev/mod_in_loop" data-broccoli-is-appender="yes" style="height:auto;overflow:hidden;padding:9px;background-color:#f9f9ff;border:3px solid transparent;border-radius:5;font-family: &amp;YuGothic&amp;, &amp;Yu Gothic&amp;, Meiryo, &amp;Hiragino Kaku Gothic ProN&amp;, Verdana, sans-serif;font-size:11.2px;color:#000;text-align:center;box-sizing:border-box;clear:both;white-space:nowrap;margin:10px 0;">(+) ここにモジュールをドラッグしてください。</div></div>
 		</li>
 <div data-broccoli-instance-path="/fields.main@1/fields.sample_loop1@0/fields.sample_loop2@0/fields.sample_loop3@1" data-broccoli-mod-id="testMod1:dev/mod_in_loop" data-broccoli-sub-mod-name="sample_loop3" data-broccoli-is-appender="yes" style="overflow:hidden;padding:5px 15px;background-color:#dfe;border:3px solid transparent;border-radius:5px;font-family: &amp;YuGothic&amp;, &amp;Yu Gothic&amp;, Meiryo, &amp;Hiragino Kaku Gothic ProN&amp;, Verdana, sans-serif;font-size:9px;text-align:center;box-sizing:border-box;clear:both;white-space:nowrap;margin:10px 0;">ここをダブルクリックして配列要素を追加してください。</div>
 		</ul>
