loopモジュール内にモジュールが入る場合のデータが扱えない問題を修正
- for Issue #2

--- a/tests/testdata/htdocs/test2/index.canvas.html
+++ b/tests/testdata/htdocs/test2/index.canvas.html
@@ -442,4 +442,66 @@ object(0) {
 <div class="twig_template-is_canvas">これは編集画面にしか表示されない要素です。</div>
 
 </div>
-<div data-broccoli-instance-path="/fields.main@22" data-broccoli-mod-id="_sys/root" data-broccoli-is-appender="yes" style="height:auto;overflow:hidden;padding:15px;background-color:#eef;border:3px solid transparent;border-radius:5;font-family: &amp;YuGothic&amp;, &amp;Yu Gothic&amp;, Meiryo, &amp;Hiragino Kaku Gothic ProN&amp;, Verdana, sans-serif;font-size:16px;color:#000;text-align:center;box-sizing:border-box;clear:both;white-space:nowrap;margin:10px 0;">(+) ここにモジュールをドラッグしてください。</div></div>
+<div class="dropdown" id="attr text id" data-broccoli-instance-path="/fields.main@22" data-broccoli-area-size-detection="shallow" data-broccoli-module-name="Dropdown">
+	<button class="btn btn-default dropdown-toggle" type="button" data-toggle="dropdown" aria-expanded="false">
+		attr text name
+		<span class="caret"></span>
+	</button>
+	<ul class="dropdown-menu" role="menu">
+		<!-- object(2) {
+  [0]=> 
+    object(1) {
+    [body]=> 
+    string(781) "<p data-broccoli-instance-path="/fields.main@22/fields.Dropdown_loop@0/fields.body@0" data-broccoli-area-size-detection="deep" data-broccoli-module-name="Multi Text">これは、Twigテンプレートに組み込まれたloopフィールドの中で、外部のモジュールを呼び出すテストです。
+繰り返しの1件目。</p>
+
+<div data-broccoli-instance-path="/fields.main@22/fields.Dropdown_loop@0/fields.body@1" data-broccoli-mod-id="testMod1:dev/Dropdown" data-broccoli-is-appender="yes" style="height:auto;overflow:hidden;padding:13px;background-color:#f4f4ff;border:3px solid transparent;border-radius:5;font-family: &amp;YuGothic&amp;, &amp;Yu Gothic&amp;, Meiryo, &amp;Hiragino Kaku Gothic ProN&amp;, Verdana, sans-serif;font-size:14.4px;color:#000;text-align:center;box-sizing:border-box;clear:both;white-space:nowrap;margin:10px 0;">(+) ここにモジュールをドラッグしてください。</div>"
+  }
+  [1]=> 
+    object(1) {
+    [body]=> 
+    string(781) "<p data-broccoli-instance-path="/fields.main@22/fields.Dropdown_loop@1/fields.body@0" data-broccoli-area-size-detection="deep" data-broccoli-module-name="Multi Text">これは、Twigテンプレートに組み込まれたloopフィールドの中で、外部のモジュールを呼び出すテストです。
+繰り返しの2件目。</p>
+
+<div data-broccoli-instance-path="/fields.main@22/fields.Dropdown_loop@1/fields.body@1" data-broccoli-mod-id="testMod1:dev/Dropdown" data-broccoli-is-appender="yes" style="height:auto;overflow:hidden;padding:13px;background-color:#f4f4ff;border:3px solid transparent;border-radius:5;font-family: &amp;YuGothic&amp;, &amp;Yu Gothic&amp;, Meiryo, &amp;Hiragino Kaku Gothic ProN&amp;, Verdana, sans-serif;font-size:14.4px;color:#000;text-align:center;box-sizing:border-box;clear:both;white-space:nowrap;margin:10px 0;">(+) ここにモジュールをドラッグしてください。</div>"
+  }
+}
+ -->
+					<li role="presentation">object(1) {
+  [body]=> 
+  string(781) "<p data-broccoli-instance-path="/fields.main@22/fields.Dropdown_loop@0/fields.body@0" data-broccoli-area-size-detection="deep" data-broccoli-module-name="Multi Text">これは、Twigテンプレートに組み込まれたloopフィールドの中で、外部のモジュールを呼び出すテストです。
+繰り返しの1件目。</p>
+
+<div data-broccoli-instance-path="/fields.main@22/fields.Dropdown_loop@0/fields.body@1" data-broccoli-mod-id="testMod1:dev/Dropdown" data-broccoli-is-appender="yes" style="height:auto;overflow:hidden;padding:13px;background-color:#f4f4ff;border:3px solid transparent;border-radius:5;font-family: &amp;YuGothic&amp;, &amp;Yu Gothic&amp;, Meiryo, &amp;Hiragino Kaku Gothic ProN&amp;, Verdana, sans-serif;font-size:14.4px;color:#000;text-align:center;box-sizing:border-box;clear:both;white-space:nowrap;margin:10px 0;">(+) ここにモジュールをドラッグしてください。</div>"
+}
+</li>
+					<li role="presentation">object(1) {
+  [body]=> 
+  string(781) "<p data-broccoli-instance-path="/fields.main@22/fields.Dropdown_loop@1/fields.body@0" data-broccoli-area-size-detection="deep" data-broccoli-module-name="Multi Text">これは、Twigテンプレートに組み込まれたloopフィールドの中で、外部のモジュールを呼び出すテストです。
+繰り返しの2件目。</p>
+
+<div data-broccoli-instance-path="/fields.main@22/fields.Dropdown_loop@1/fields.body@1" data-broccoli-mod-id="testMod1:dev/Dropdown" data-broccoli-is-appender="yes" style="height:auto;overflow:hidden;padding:13px;background-color:#f4f4ff;border:3px solid transparent;border-radius:5;font-family: &amp;YuGothic&amp;, &amp;Yu Gothic&amp;, Meiryo, &amp;Hiragino Kaku Gothic ProN&amp;, Verdana, sans-serif;font-size:14.4px;color:#000;text-align:center;box-sizing:border-box;clear:both;white-space:nowrap;margin:10px 0;">(+) ここにモジュールをドラッグしてください。</div>"
+}
+</li>
+			</ul>
+</div><!-- / #attr text id -->
+<div data-broccoli-instance-path="/fields.main@23" data-broccoli-area-size-detection="shallow" data-broccoli-module-name="テキスト系のテスト"><div>テキスト入力しています。<br />&lt;b&gt;テキスト&lt;/b&gt;です。</div>
+<div>1行&lt;b&gt;テキスト&lt;/b&gt;です。</div>
+<div><p>HTML入力です。</p>
+<p>HTMLソースを入力しています。</p></div>
+<div><p>1行HTML入力です。</p></div>
+<div><p>マークダウンです。</p>
+<ul>
+<li>markdown 1</li>
+<li>markdown 2</li>
+</ul>
+</div>
+<div><ul>
+<li>1行マークダウンです</li>
+</ul>
+</div>
+<div><h2 id="multitext">MultiText</h2>
+<p>マルチテキストです。</p>
+</div>
+<div>- 1行マルチテキストです。</div>
+</div><div data-broccoli-instance-path="/fields.main@24" data-broccoli-mod-id="_sys/root" data-broccoli-is-appender="yes" style="height:auto;overflow:hidden;padding:15px;background-color:#eef;border:3px solid transparent;border-radius:5;font-family: &amp;YuGothic&amp;, &amp;Yu Gothic&amp;, Meiryo, &amp;Hiragino Kaku Gothic ProN&amp;, Verdana, sans-serif;font-size:16px;color:#000;text-align:center;box-sizing:border-box;clear:both;white-space:nowrap;margin:10px 0;">(+) ここにモジュールをドラッグしてください。</div></div>
