--- a/tests/testdata/htdocs/test2/index.html
+++ b/tests/testdata/htdocs/test2/index.html
@@ -441,3 +441,65 @@ object(0) {
 
 
 </div>
+<div class="dropdown" id="attr text id">
+	<button class="btn btn-default dropdown-toggle" type="button" data-toggle="dropdown" aria-expanded="false">
+		attr text name
+		<span class="caret"></span>
+	</button>
+	<ul class="dropdown-menu" role="menu">
+		<!-- object(2) {
+  [0]=> 
+    object(1) {
+    [body]=> 
+    string(72) "<p>これは、Twigテンプレートに組み込まれたloopフィールドの中で、外部のモジュールを呼び出すテストです。
+繰り返しの1件目。</p>
+
+"
+  }
+  [1]=> 
+    object(1) {
+    [body]=> 
+    string(72) "<p>これは、Twigテンプレートに組み込まれたloopフィールドの中で、外部のモジュールを呼び出すテストです。
+繰り返しの2件目。</p>
+
+"
+  }
+}
+ -->
+					<li role="presentation">object(1) {
+  [body]=> 
+  string(72) "<p>これは、Twigテンプレートに組み込まれたloopフィールドの中で、外部のモジュールを呼び出すテストです。
+繰り返しの1件目。</p>
+
+"
+}
+</li>
+					<li role="presentation">object(1) {
+  [body]=> 
+  string(72) "<p>これは、Twigテンプレートに組み込まれたloopフィールドの中で、外部のモジュールを呼び出すテストです。
+繰り返しの2件目。</p>
+
+"
+}
+</li>
+			</ul>
+</div><!-- / #attr text id -->
+<div>テキスト入力しています。<br />&lt;b&gt;テキスト&lt;/b&gt;です。</div>
+<div>1行&lt;b&gt;テキスト&lt;/b&gt;です。</div>
+<div><p>HTML入力です。</p>
+<p>HTMLソースを入力しています。</p></div>
+<div><p>1行HTML入力です。</p></div>
+<div><p>マークダウンです。</p>
+<ul>
+<li>markdown 1</li>
+<li>markdown 2</li>
+</ul>
+</div>
+<div><ul>
+<li>1行マークダウンです</li>
+</ul>
+</div>
+<div><h2 id="multitext">MultiText</h2>
+<p>マルチテキストです。</p>
+</div>
+<div>- 1行マルチテキストです。</div>
