(コミット漏れ)

--- a/tests/testdata/htdocs/test2/index.canvas.html
+++ b/tests/testdata/htdocs/test2/index.canvas.html
@@ -501,7 +501,11 @@ object(0) {
 </ul>
 </div>
 <div><h2 id="multitext">MultiText</h2>
-<p>マルチテキストです。</p>
+<p><strong>マルチテキスト</strong>です。</p>
+<ul>
+<li>list 1</li>
+<li>list 2</li>
+</ul>
 </div>
 <div>- 1行マルチテキストです。</div>
 </div><div data-broccoli-instance-path="/fields.main@24" data-broccoli-mod-id="_sys/root" data-broccoli-is-appender="yes" style="height:auto;overflow:hidden;padding:15px;background-color:#eef;border:3px solid transparent;border-radius:5;font-family: &amp;YuGothic&amp;, &amp;Yu Gothic&amp;, Meiryo, &amp;Hiragino Kaku Gothic ProN&amp;, Verdana, sans-serif;font-size:16px;color:#000;text-align:center;box-sizing:border-box;clear:both;white-space:nowrap;margin:10px 0;">(+) ここにモジュールをドラッグしてください。</div></div>
