--- a/tests/testdata/htdocs/test2/index.html
+++ b/tests/testdata/htdocs/test2/index.html
@@ -500,6 +500,10 @@ object(0) {
 </ul>
 </div>
 <div><h2 id="multitext">MultiText</h2>
-<p>マルチテキストです。</p>
+<p><strong>マルチテキスト</strong>です。</p>
+<ul>
+<li>list 1</li>
+<li>list 2</li>
+</ul>
 </div>
 <div>- 1行マルチテキストです。</div>
