selectフィールドに、オプション `"display": "radio"` を追加。ラジオボタン形式の入力欄を作成できるようになった。

--- a/tests/testdata/htdocs/editpage/index.html
+++ b/tests/testdata/htdocs/editpage/index.html
@@ -240,6 +240,9 @@ moduleフィールドを追加。<code>input type:module</code> は廃止。</p>
 	<div class="cols-col cols-1of3 cols-last"><div class="cols-pad">
 <p>したーーーのほうも再描画テスト。</p>
 
+<div>default2</div>
+<div>select2</div>
+<div>radio3</div>
 
 	</div></div>
 </div><!-- / .cols -->
