--- a/tests/testdata/htdocs/test2/index.canvas.html
+++ b/tests/testdata/htdocs/test2/index.canvas.html
@@ -224,7 +224,10 @@ moduleフィールドを追加。<code>input type:module</code> は廃止。</p>
 	<div class="cols-col cols-1of3 cols-last"><div class="cols-pad">
 <p data-broccoli-instance-path="/fields.main@8/fields.column3@0" data-broccoli-area-size-detection="shallow" data-broccoli-module-name="Markdown">したーーーのほうも再描画テスト。</p>
 
-<div data-broccoli-instance-path="/fields.main@8/fields.column3@1" data-broccoli-mod-id="testMod1:units/cols3" data-broccoli-is-appender="yes" style="height:auto;overflow:hidden;padding:15px;background-color:#eef;border:3px solid transparent;border-radius:5;font-family: &amp;YuGothic&amp;, &amp;Yu Gothic&amp;, Meiryo, &amp;Hiragino Kaku Gothic ProN&amp;, Verdana, sans-serif;font-size:16px;color:#000;text-align:center;box-sizing:border-box;clear:both;white-space:nowrap;margin:10px 0;">(+) ここにモジュールをドラッグしてください。</div>
+<div data-broccoli-instance-path="/fields.main@8/fields.column3@1" data-broccoli-area-size-detection="shallow" data-broccoli-module-name="selectフィールドのテスト"><div>default2</div>
+<div>select2</div>
+<div>radio3</div>
+</div><div data-broccoli-instance-path="/fields.main@8/fields.column3@2" data-broccoli-mod-id="testMod1:units/cols3" data-broccoli-is-appender="yes" style="height:auto;overflow:hidden;padding:15px;background-color:#eef;border:3px solid transparent;border-radius:5;font-family: &amp;YuGothic&amp;, &amp;Yu Gothic&amp;, Meiryo, &amp;Hiragino Kaku Gothic ProN&amp;, Verdana, sans-serif;font-size:16px;color:#000;text-align:center;box-sizing:border-box;clear:both;white-space:nowrap;margin:10px 0;">(+) ここにモジュールをドラッグしてください。</div>
 	</div></div>
 </div><!-- / .cols -->
 <div class="cols unit" data-broccoli-instance-path="/fields.main@9" data-broccoli-area-size-detection="shallow" data-broccoli-module-name=".cols (2カラム)">
