update: README.md, test data

--- a/tests/testdata/htdocs/editpage/index.html
+++ b/tests/testdata/htdocs/editpage/index.html
@@ -526,6 +526,9 @@ object(0) {
 </ul>
 </div>
 <div>- 1行マルチテキストです。</div>
+<div>フィールド1</div>
+<div>フィールド2</div>
+<div>フィールド3</div>
 
         </div><!-- /main -->
         <h2>secondly</h2>
