モジュール設定 `deprecated` を追加。非推奨のモジュールに `true` をセットすると、モジュールパレットに表示されなくなる。

--- a/tests/testdata/htdocs/editpage/index.html
+++ b/tests/testdata/htdocs/editpage/index.html
@@ -529,6 +529,9 @@ object(0) {
 <div>フィールド1</div>
 <div>フィールド2</div>
 <div>フィールド3</div>
+<div class="deprecated">
+    This module is deprecated.<br />
+</div>
 
         </div><!-- /main -->
         <h2>secondly</h2>
