--- a/tests/testdata/htdocs/test2/index.html
+++ b/tests/testdata/htdocs/test2/index.html
@@ -513,3 +513,6 @@ object(0) {
 <div>フィールド1</div>
 <div>フィールド2</div>
 <div>フィールド3</div>
+<div class="deprecated">
+    This module is deprecated.<br />
+</div>
