--- a/tests/testdata/htdocs/test2/index.html
+++ b/tests/testdata/htdocs/test2/index.html
@@ -33,7 +33,7 @@
 <pre><code>{$idx}:{$dir}/{$name}
 </code></pre>
 
-<img src="./test1_files/resources/b949e7429bdfed6bd195a89f69fd2c13.unknown" alt="" /><h2 id="minimum" data-dec="DEC入力テスト">最小構成のモジュールのサンプル</h2>
+<img src="./index_files/resources/otosan.png" alt="" /><h2 id="minimum" data-dec="DEC入力テスト">最小構成のモジュールのサンプル</h2>
 
 
 	</div></div>
@@ -67,9 +67,9 @@
 <div class="unit thumb_list">
 	<ul>
 
-		<li><div class="thumb_list-pad"><a href="http://www.pxt.jp/"><img src="./test1_files/resources/fe97281abfb0badd97668226cb50b6f3.unknown" alt="pxt" /><span class="thumb_list-caption">pxt</span></a></div></li>
+		<li><div class="thumb_list-pad"><a href="http://www.pxt.jp/"><img src="./index_files/resources/i-love-coffee.png" alt="pxt" /><span class="thumb_list-caption">pxt</span></a></div></li>
 
-		<li><div class="thumb_list-pad"><a href="http://pickles.pxt.jp/"><img src="./test1_files/resources/060cc839a391baf81779188e7dfa553d.unknown" alt="pxt" /><span class="thumb_list-caption">こまった。</span></a></div></li>
+		<li><div class="thumb_list-pad"><a href="http://pickles.pxt.jp/"><img src="./index_files/resources/i-love-md8.png" alt="pxt" /><span class="thumb_list-caption">こまった。</span></a></div></li>
 
 	</ul>
 </div><!-- /.thumb_list -->
@@ -287,17 +287,17 @@ moduleフィールドを追加。<code>input type:module</code> は廃止。</p>
 	</div></div>
 	<div class="cols-col cols-1of3"><div class="cols-pad">
 
-<img src="./test1_files/resources/06f830991ad501926013ab2f9a52621b.png" alt="テストテキスト" /><p>↑これはpng</p>
+<img src="./index_files/resources/06f830991ad501926013ab2f9a52621b.png" alt="テストテキスト" /><p>↑これはpng</p>
 
 
-<a href="http://www.pxt.jp/"><img src="./test1_files/resources/1e970f28b68cf1c3318431e73040c492.svg" alt="SVG画像を読み込む練習です。" /></a><p>↑これはSVG</p>
+<a href="http://www.pxt.jp/"><img src="./index_files/resources/1e970f28b68cf1c3318431e73040c492.svg" alt="SVG画像を読み込む練習です。" /></a><p>↑これはSVG</p>
 
 
 	</div></div>
 	<div class="cols-col cols-1of3 cols-last"><div class="cols-pad">
 
-<a href="/plans/gui_spec/"><img src="./test1_files/resources/father.png" alt="テスト" /></a>
-<img src="./test1_files/resources/a70f514b03f4ccf52c12cc073d2e4c78.png" alt="pxt logo" /><p>マークダウン。</p>
+<a href="/plans/gui_spec/"><img src="./index_files/resources/father.png" alt="テスト" /></a>
+<img src="./index_files/resources/everyone.png" alt="pxt logo" /><p>マークダウン。</p>
 
 
 	</div></div>
