JPEGのサンプルを追加

--- a/tests/testdata/htdocs/editpage/index.html
+++ b/tests/testdata/htdocs/editpage/index.html
@@ -49,7 +49,7 @@
 <pre><code>{$idx}:{$dir}/{$name}
 </code></pre>
 
-<img src="./index_files/resources/otosan.png" alt="" /><h2 id="minimum" data-dec="DEC入力テスト">最小構成のモジュールのサンプル</h2>
+<img src="./index_files/resources/otosan.jpg" alt="" /><h2 id="minimum" data-dec="DEC入力テスト">最小構成のモジュールのサンプル</h2>
 
 
 	</div></div>
