サーバーサイドに新しいAPI `broccoli.updateContents()` を追加。

--- a/tests/testdata/htdocs/test2/index.html
+++ b/tests/testdata/htdocs/test2/index.html
@@ -337,7 +337,7 @@ moduleフィールドを追加。<code>input type:module</code> は廃止。</p>
 </div><!-- / .cols -->
 <p class="finalized" style="color: #f00;">finalized</p><div>
     <p>custom1 field</p>
-あれ？
+<div style="background-color:#993; color:#fff; padding:1em;">あれ？</div>
     <p>/custom1 field</p>
 </div>
 <p class="finalized" style="color: #00f;">finalized</p><div style="background:#f00;padding:10px;color:#fff;text-align:center;border:1px solid #fdd;">[ERROR] 未知のモジュールテンプレートです。<!-- .error --></div>
