--- a/tests/testdata/htdocs/test2/index.canvas.html
+++ b/tests/testdata/htdocs/test2/index.canvas.html
@@ -337,7 +337,7 @@ moduleフィールドを追加。<code>input type:module</code> は廃止。</p>
 </div><!-- / .cols -->
 <div data-broccoli-instance-path="/fields.main@14" data-broccoli-area-size-detection="shallow" data-broccoli-module-name="カスタムフィールドを用いたモジュールの実装例"><p class="finalized" style="color: #f00;">finalized</p><div>
     <p>custom1 field</p>
-あれ？
+<div style="background-color:#993; color:#fff; padding:1em;">あれ？</div>
     <p>/custom1 field</p>
 </div>
 <p class="finalized" style="color: #00f;">finalized</p></div><div style="background:#f00;padding:10px;color:#fff;text-align:center;border:1px solid #fdd;" data-broccoli-instance-path="/fields.main@15" data-broccoli-area-size-detection="shallow" data-broccoli-module-name="_sys/unknown">[ERROR] 未知のモジュールテンプレートです。<!-- .error --></div>
