imageフィールドは、画像登録がない場合を除き base64ではなく 実体を参照するようにした。

--- a/tests/testdata/htdocs/editpage/index.html
+++ b/tests/testdata/htdocs/editpage/index.html
@@ -536,7 +536,8 @@ object(0) {
         </div><!-- /main -->
         <h2>secondly</h2>
         <div class="contents" data-contents="secondly">
-<div class="unit">
+
+<img src="./index_files/resources/noname.unknown" alt="" /><div class="unit">
 <div class="unit">
 <div class="unit">
 <div class="unit">
