buildCss() が、モジュールのCSSに含まれる `url()` を base64 に置き換えてビルドするようになった。

--- a/tests/testdata/htdocs/editpage/index.html
+++ b/tests/testdata/htdocs/editpage/index.html
@@ -14,6 +14,11 @@
         <h1>sample page</h1>
         <h2>main</h2>
         <div class="contents" data-contents="main">
+<div class="resource-build">
+	<p>
+		resource build.<br />
+	</p>
+</div>
 <h2 id="-">デフォルトの値</h2>
 <p>ここを編集してください。</p>
 
