--- a/tests/testdata/htdocs/editpage/index.html
+++ b/tests/testdata/htdocs/editpage/index.html
@@ -43,6 +43,22 @@
 		</ul>
 		</li>
 
+		<li>loop2
+		<ul>
+
+		<li>loop3:
+			<div></div>
+			<div></div>
+		</li>
+
+		<li>loop3:
+			<div></div>
+			<div></div>
+		</li>
+
+		</ul>
+		</li>
+
 	</ul>
 	</li>
 
@@ -541,8 +557,7 @@ object(0) {
         </div><!-- /main -->
         <h2>secondly</h2>
         <div class="contents" data-contents="secondly">
-
-<img src="./index_files/resources/noname.unknown" alt="" /><div class="unit">
+<div class="unit">
 <div class="unit">
 <div class="unit">
 <div class="unit">
