(dist, test data update)

--- a/tests/testdata/htdocs/test2/index.html
+++ b/tests/testdata/htdocs/test2/index.html
@@ -521,3 +521,35 @@ object(0) {
 <div class="deprecated">
     This module is deprecated.<br />
 </div>
+<!-- module field -->
+
+
+
+<div style="border: 1px solid #f00;">
+    <div>test</div>
+<!-- module field -->
+
+
+
+
+
+<!-- loop field -->
+
+
+
+<ul style="border: 1px solid #f00;">
+    <li>test</li>
+
+    <li>リスト</li>
+
+</ul>
+
+
+<!-- /.unit --></div>
+
+
+
+<!-- loop field -->
+
+
+
