--- a/tests/testdata/htdocs/editpage/index.html
+++ b/tests/testdata/htdocs/editpage/index.html
@@ -537,6 +537,38 @@ object(0) {
 <div class="deprecated">
     This module is deprecated.<br />
 </div>
+<!-- module field -->
+
+
+
+<div style="border: 1px solid #f00;">
+    <div>test</div>
+<!-- module field -->
+
+
+
+
+
+<!-- loop field -->
+
+
+
+<ul style="border: 1px solid #f00;">
+    <li>test</li>
+
+    <li>リスト</li>
+
+</ul>
+
+
+<!-- /.unit --></div>
+
+
+
+<!-- loop field -->
+
+
+
 
         </div><!-- /main -->
         <h2>secondly</h2>
