--- a/tests/testdata/htdocs/test2/index.canvas.html
+++ b/tests/testdata/htdocs/test2/index.canvas.html
@@ -522,4 +522,46 @@ object(0) {
 </div><div class="deprecated" data-broccoli-instance-path="/fields.main@26" data-broccoli-area-size-detection="shallow" data-broccoli-module-name="deprecated">
     This module is deprecated.<br>
 </div>
-<div data-broccoli-instance-path="/fields.main@27" data-broccoli-mod-id="_sys/root" data-broccoli-is-appender="yes" style="height:auto;overflow:hidden;padding:15px;background-color:#eef;border:3px solid transparent;border-radius:5;font-family: &amp;YuGothic&amp;, &amp;Yu Gothic&amp;, Meiryo, &amp;Hiragino Kaku Gothic ProN&amp;, Verdana, sans-serif;font-size:16px;color:#000;text-align:center;box-sizing:border-box;clear:both;white-space:nowrap;margin:10px 0;">(+) Drop a module here</div></div>
+<div data-broccoli-instance-path="/fields.main@27" data-broccoli-area-size-detection="shallow" data-broccoli-module-name="moduleフィールド、loopフィールド を hidden して if して echo する"><!-- module field -->
+
+
+
+<div style="border: 1px solid #f00;">
+    <div>test</div>
+<div data-broccoli-instance-path="/fields.main@27/fields.main@0" data-broccoli-area-size-detection="shallow" data-broccoli-module-name="moduleフィールド、loopフィールド を hidden して if して echo する"><!-- module field -->
+
+
+
+<div style="border: 1px solid #f00;">
+    <div>test</div>
+<div data-broccoli-instance-path="/fields.main@27/fields.main@0/fields.main@0" data-broccoli-mod-id="testMod1:dev/module_hidden" data-broccoli-is-appender="yes" style="height:auto;overflow:hidden;padding:13px;background-color:#f4f4ff;border:3px solid transparent;border-radius:5;font-family: &amp;YuGothic&amp;, &amp;Yu Gothic&amp;, Meiryo, &amp;Hiragino Kaku Gothic ProN&amp;, Verdana, sans-serif;font-size:14.4px;color:#000;text-align:center;box-sizing:border-box;clear:both;white-space:nowrap;margin:10px 0;">(+) Drop a module here</div>
+<!-- /.unit --></div>
+
+
+
+<!-- loop field -->
+
+
+
+<ul style="border: 1px solid #f00;">
+    <li>test</li>
+
+    <li data-broccoli-instance-path="/fields.main@27/fields.main@0/fields.loop@0" data-broccoli-sub-mod-name="loop" data-broccoli-area-size-detection="shallow" data-broccoli-module-name="- moduleフィールド、loopフィールド を hidden して if して echo する -">リスト</li>
+<div data-broccoli-instance-path="/fields.main@27/fields.main@0/fields.loop@1" data-broccoli-mod-id="testMod1:dev/module_hidden" data-broccoli-sub-mod-name="loop" data-broccoli-is-appender="yes" style="overflow:hidden;padding:5px 15px;background-color:#dfe;border:3px solid transparent;border-radius:5px;font-family: &amp;YuGothic&amp;, &amp;Yu Gothic&amp;, Meiryo, &amp;Hiragino Kaku Gothic ProN&amp;, Verdana, sans-serif;font-size:9px;text-align:center;box-sizing:border-box;clear:both;white-space:nowrap;margin:10px 0;">Double click here to add array element</div>
+</ul>
+
+</div><div data-broccoli-instance-path="/fields.main@27/fields.main@1" data-broccoli-mod-id="testMod1:dev/module_hidden" data-broccoli-is-appender="yes" style="height:auto;overflow:hidden;padding:15px;background-color:#eef;border:3px solid transparent;border-radius:5;font-family: &amp;YuGothic&amp;, &amp;Yu Gothic&amp;, Meiryo, &amp;Hiragino Kaku Gothic ProN&amp;, Verdana, sans-serif;font-size:16px;color:#000;text-align:center;box-sizing:border-box;clear:both;white-space:nowrap;margin:10px 0;">(+) Drop a module here</div>
+<!-- /.unit --></div>
+
+
+
+<!-- loop field -->
+
+
+
+<ul style="border: 1px solid #f00;">
+    <li>test</li>
+<div data-broccoli-instance-path="/fields.main@27/fields.loop@0" data-broccoli-mod-id="testMod1:dev/module_hidden" data-broccoli-sub-mod-name="loop" data-broccoli-is-appender="yes" style="overflow:hidden;padding:5px 15px;background-color:#dfe;border:3px solid transparent;border-radius:5px;font-family: &amp;YuGothic&amp;, &amp;Yu Gothic&amp;, Meiryo, &amp;Hiragino Kaku Gothic ProN&amp;, Verdana, sans-serif;font-size:9px;text-align:center;box-sizing:border-box;clear:both;white-space:nowrap;margin:10px 0;">Double click here to add array element</div>
+</ul>
+
+</div><div data-broccoli-instance-path="/fields.main@28" data-broccoli-mod-id="_sys/root" data-broccoli-is-appender="yes" style="height:auto;overflow:hidden;padding:15px;background-color:#eef;border:3px solid transparent;border-radius:5;font-family: &amp;YuGothic&amp;, &amp;Yu Gothic&amp;, Meiryo, &amp;Hiragino Kaku Gothic ProN&amp;, Verdana, sans-serif;font-size:16px;color:#000;text-align:center;box-sizing:border-box;clear:both;white-space:nowrap;margin:10px 0;">(+) Drop a module here</div></div>
