--- a/tests/testdata/htdocs/test1/test1.html
+++ b/tests/testdata/htdocs/test1/test1.html
@@ -1,5 +1,4 @@
 <div class="unit" data-dec="あああああああ">
-
 <!-- /.unit --></div>
 <div class="cols unit" data-dec="あああああああ">
 	<div class="cols-col cols-1of3"><div class="cols-pad">
@@ -9,18 +8,13 @@
 <li>list 2</li>
 </ul>
 <h2 id="-">最小構成のモジュールのサンプル</h2>
-
 <h2 id="-1-id-">(1) モジュールIDの表現形式</h2>
 <pre><code>{$idx}:{$dir}/{$name}
-</code></pre>
-
-	</div></div>
+</code></pre>	</div></div>
 	<div class="cols-col cols-1of3"><div class="cols-pad">
 <h2 id="-2-">(2) モジュールテンプレートの定義場所</h2>
 <p><code>px-files/px2dtconfig.json</code> に定義する。
 あああああ</p>
-
-
 	</div></div>
 	<div class="cols-col cols-1of3 cols-last"><div class="cols-pad">
 <h2 id="-3-composer-">(3) Composer から呼び出す場合</h2>
@@ -28,8 +22,6 @@
 <li>require に、リポジトリを指定する。</li>
 <li>ディレクトリのパスは <code>./vendor/vendorname/libname/~~~~</code> になるはず。</li>
 </ul>
-
-
 	</div></div>
 </div><!-- / .cols -->
 <div class="unit thumb_list">
@@ -54,25 +46,16 @@
 <h2 id="-">長いページを作るテスト</h2>
 <p>長いページを作ると、スクロールバーが出る。</p>
 <p>高さ調整のためのスクリプトの実行順序を見直すと直るのではないかな。</p>
-
-
 	</div></div>
 	<div class="cols-col cols-1of3"><div class="cols-pad">
 <h2>自分でコーディングする領域</h2>
 <p>HTMLコードを自分で書きます。</p>
-<p>HTMLエンティティ変換もされないので、<strong>自分で書きます</strong>。</p>
-ただのテキスト。&lt;br /&gt;<br />HTMLエンティティ変換される、はず。<br /><br />- でも、markdownの書式は使えない、はず。<br /><br />あー、改行が反映されない、か。
-
-	</div></div>
+<p>HTMLエンティティ変換もされないので、<strong>自分で書きます</strong>。</p>ただのテキスト。&lt;br /&gt;<br />HTMLエンティティ変換される、はず。<br /><br />- でも、markdownの書式は使えない、はず。<br /><br />あー、改行が反映されない、か。	</div></div>
 	<div class="cols-col cols-1of3 cols-last"><div class="cols-pad">
-宿題宿題。
-宿題やったかー？<br />＼(^o^)／
-<p>会社の宿題。</p>
+宿題宿題。宿題やったかー？<br />＼(^o^)／<p>会社の宿題。</p>
 <p>module はやっぱり、input の1つでは問題がある。不便。</p>
 <p>こいつは直しました。
 moduleフィールドを追加。<code>input type:module</code> は廃止。</p>
-
-
 	</div></div>
 </div><!-- / .cols -->
 <div class="unit">
@@ -80,12 +63,10 @@ moduleフィールドを追加。<code>input type:module</code> は廃止。</p>
 <ul>
 
 	<li>loop1: <p>テストテキストモジュールー！</p>
-
 	<ul>
 
 		<li>loop2: <p>テスト2
 うふろぉぉぉぉ</p>
-
 		<ul>
 
 		<li>loop3:
@@ -104,7 +85,6 @@ moduleフィールドを追加。<code>input type:module</code> は廃止。</p>
 		</li>
 
 		<li>loop2: <p>テスト2いいいおおおお</p>
-
 		<ul>
 
 		<li>loop3:
@@ -132,14 +112,12 @@ moduleフィールドを追加。<code>input type:module</code> は廃止。</p>
 	</li>
 
 	<li>loop1: <p>テキストテキストー！</p>
-
 	<ul>
 
 	</ul>
 	</li>
 
-	<li>loop1: 
-	<ul>
+	<li>loop1: 	<ul>
 
 	</ul>
 	</li>
@@ -150,7 +128,6 @@ moduleフィールドを追加。<code>input type:module</code> は廃止。</p>
 <p>まだ帰らなくてもいいでしょ。
 もっと遊びたいんだよ。</p>
 <p>いいじゃんかよーーーー！</p>
-
 <ul>
 
 <li><p>きたーーーー！</p>
@@ -166,32 +143,23 @@ moduleフィールドを追加。<code>input type:module</code> は廃止。</p>
 </li>
 
 </ul>
-
 <!-- /.unit --></div>
 <h2 id="-">いい感じになってまいりました</h2>
 <p>あけましておめでとうございます。</p>
-
 <h2 id="-">できました</h2>
 <p><code>px.utils.iterate()</code> が、オブジェクトも処理できるようになりました。</p>
-
 <div class="cols unit">
 	<div class="cols-col cols-1of3"><div class="cols-pad">
 <h2 id="-">長いページを作るテスト</h2>
 <p>長いページを作ると、スクロールバーが出る。</p>
 <p>高さ調整のためのスクリプトの実行順序を見直すと直るのではないかな。</p>
-
-
 	</div></div>
 	<div class="cols-col cols-1of3"><div class="cols-pad">
 <p>複雑な画面をつくろうと思うと・・・やっぱそこそこ大変ね。</p>
 <p>配列処理を毎回キックしてるので、リフレッシュに時間がかかる。重い。</p>
-
-
 	</div></div>
 	<div class="cols-col cols-1of3 cols-last"><div class="cols-pad">
 <p>まぁ、このあたりは、上手い人にお願いしちゃお。</p>
-
-
 	</div></div>
 </div><!-- / .cols -->
 <div class="cols unit">
@@ -200,64 +168,43 @@ moduleフィールドを追加。<code>input type:module</code> は廃止。</p>
 <p>長いページを作ると、スクロールバーが出る。</p>
 <h3 id="-">コールバックチェーンがいまいち</h3>
 <p>高さ調整のためのスクリプトの実行順序を見直すと直るのではないかな。</p>
-
-
 	</div></div>
 	<div class="cols-col cols-1of2 cols-last"><div class="cols-pad">
 <h2 id="-">複雑になっちゃったなぁ</h2>
 <h3 id="-">なかなかさ、あれですな。</h3>
 <p>集中して構えないと手を入れられない感じ。むぅ。</p>
-
-
 	</div></div>
 </div><!-- / .cols -->
 <h2 id="-">長いページを作るテスト</h2>
 <p>長いページを作ると、スクロールバーが出る。</p>
 <p>高さ調整のためのスクリプトの実行順序を見直すと直るのではないかな。</p>
-
 <div class="cols unit">
 	<div class="cols-col cols-1of3"><div class="cols-pad">
 <h2 id="-">長いページを作るテスト</h2>
 <p>長いページを作ると、スクロールバーが出る。</p>
 <p>高さ調整のためのスクリプトの実行順序を見直すと直るのではないかな。</p>
-
-
 	</div></div>
 	<div class="cols-col cols-1of3"><div class="cols-pad">
-
 <img src="./test1_files/resources/06f830991ad501926013ab2f9a52621b.png" alt="テストテキスト" /><p>↑これはpng</p>
-
-
 <a href="http://www.pxt.jp/"><img src="./test1_files/resources/1e970f28b68cf1c3318431e73040c492.svg" alt="SVG画像を読み込む練習です。" /></a><p>↑これはSVG</p>
-
-
 	</div></div>
 	<div class="cols-col cols-1of3 cols-last"><div class="cols-pad">
-
-<a href="/plans/gui_spec/"><img src="./test1_files/resources/father.png" alt="テスト" /></a>
-<img src="./test1_files/resources/a70f514b03f4ccf52c12cc073d2e4c78.png" alt="pxt logo" /><p>マークダウン。</p>
-
-
+<a href="/plans/gui_spec/"><img src="./test1_files/resources/father.png" alt="テスト" /></a><img src="./test1_files/resources/a70f514b03f4ccf52c12cc073d2e4c78.png" alt="pxt logo" /><p>マークダウン。</p>
 	</div></div>
 </div><!-- / .cols -->
 <div class="cols unit">
 	<div class="cols-col cols-1of3"><div class="cols-pad">
-## JSON のフォーマットを、人にやさしくしてみました。<br /><br />テキストコード。
-
-	</div></div>
+## JSON のフォーマットを、人にやさしくしてみました。<br /><br />テキストコード。	</div></div>
 	<div class="cols-col cols-1of3"><div class="cols-pad">
 <h2 id="json-">JSON自体の差分を追えるようになりたい。</h2>
 <p>やっぱね、マークダウンが便利っす。</p>
 <p>大抵のことはこれで事足りる。</p>
 <p>ちゃんとマークアップできるし。コードもそこそこキレイにできる。</p>
-
-
 	</div></div>
 	<div class="cols-col cols-1of3 cols-last"><div class="cols-pad">
 <p>こうすると、なるらしい。</p>
 <pre><code>var jsonStr = JSON.stringify( {&quot;JSON&quot;:&quot;value&quot;}, null, 1 );
-</code></pre>
-<ul>
+</code></pre><ul>
 
 <li><p>増えたっていいじゃない？</p>
 </li>
@@ -270,50 +217,38 @@ moduleフィールドを追加。<code>input type:module</code> は廃止。</p>
 </li>
 
 </ul>
-
 	</div></div>
 </div><!-- / .cols -->
 <div class="cols unit">
 	<div class="cols-col cols-1of3"><div class="cols-pad">
 <h3 id="-">ね。遊んでくればいいじゃんか</h3>
-
-
 	</div></div>
 	<div class="cols-col cols-1of3"><div class="cols-pad">
 <h3 id="-">どうなってんだー</h3>
 <p>なかなか再現しないなぁ。</p>
 <p>高さが増えるイベントが起きた直後に、スクロールバーの分座標がずれるっぽい。</p>
-
-
 	</div></div>
 	<div class="cols-col cols-1of3 cols-last"><div class="cols-pad">
 <h3 id="-">処理の順番間違ってるかな？</h3>
 <p>復旧したっ。</p>
-
-
 	</div></div>
 </div><!-- / .cols -->
-
 <div style="background:#f00;padding:10px;color:#fff;text-align:center;border:1px solid #fdd;">[ERROR] 未知のモジュールテンプレートです。<!-- .error --></div>
 <h2 id="-">あれ。</h2>
 <p><code>app.contentsSourceData.js (138)</code> で出たエラーが出てこない。</p>
-
 <p>loopフィールドの多階層処理のテスト用モジュール</p>
 <ul>
 
 	<li>loop1: <p>まーくだうーん</p>
-
 	<ul>
 
 	</ul>
 	</li>
 
 	<li>loop1: <h2 id="md">md</h2>
-
 	<ul>
 
 		<li>loop2: <h2 id="md-layer-2">md layer 2</h2>
-
 		<ul>
 
 		<li>loop3:
@@ -330,10 +265,7 @@ moduleフィールドを追加。<code>input type:module</code> は廃止。</p>
 
 </ul>
 <p>/loopフィールドの多階層処理のテスト用モジュール</p>
-
 <div class="attention_box">
-
 	<p class="attention_box-heading">Heading</p>
 
-	
-</div><!-- /.attention_box -->
+	</div><!-- /.attention_box -->
