--- a/tests/testdata/htdocs/test2/index.html
+++ b/tests/testdata/htdocs/test2/index.html
@@ -5,7 +5,6 @@
 </div>
 <h2 id="-">デフォルトの値</h2>
 <p>ここを編集してください。</p>
-
 <p>loopフィールドの中にmoduleフィールド</p>
 <ul>
 
@@ -20,7 +19,6 @@
 <p>multitext. -</p>
 </div>
 			<div><p>child.</p>
-
 </div>
 		</li>
 
@@ -36,17 +34,12 @@
 	<div class="cols-col cols-1of3"><div class="cols-pad">
 <h2 id="-1-id-">(1) モジュールIDの表現形式</h2>
 <pre><code>{$idx}:{$dir}/{$name}
-</code></pre>
-
-<img src="./index_files/resources/otosan.jpg" alt="" /><h2 id="minimum" data-dec="DEC入力テスト">最小構成のモジュールのサンプル</h2>
-
-
+</code></pre><img src="./index_files/resources/otosan.jpg" alt="" /><h2 id="minimum" data-dec="DEC入力テスト">最小構成のモジュールのサンプル</h2>
 	</div></div>
 	<div class="cols-col cols-1of3"><div class="cols-pad">
 <h2 id="-2-">(2) モジュールテンプレートの定義場所</h2>
 <p><code>px-files/px2dtconfig.json</code> に定義する。
 あああああ</p>
-
 <h2 id="markdown-">Markdownフィールド</h2>
 <ul>
 <li>list 1</li>
@@ -54,7 +47,6 @@
 </ul>
 <p>再描画されます。</p>
 <p>再描画されました。</p>
-
 	</div></div>
 	<div class="cols-col cols-1of3 cols-last"><div class="cols-pad">
 <h2 id="-3-composer-">(3) Composer から呼び出す場合</h2>
@@ -63,10 +55,7 @@
 <li>ディレクトリのパスは <code>./vendor/vendorname/libname/~~~~</code> になるはず。</li>
 </ul>
 <p>長い文字コンテンツ。長い文字コンテンツ。長い文字コンテンツ。長い文字コンテンツ。長い文字コンテンツ。長い文字コンテンツ。長い文字コンテンツ。長い文字コンテンツ。長い文字コンテンツ。長い文字コンテンツ。長い文字コンテンツ。長い文字コンテンツ。長い文字コンテンツ。長い文字コンテンツ。長い文字コンテンツ。長い文字コンテンツ。長い文字コンテンツ。長い文字コンテンツ。長い文字コンテンツ。長い文字コンテンツ。長い文字コンテンツ。長い文字コンテンツ。長い文字コンテンツ。長い文字コンテンツ。</p>
-
 <h2 id="-">まるちテキストを追加してみました。</h2>
-
-
 	</div></div>
 </div><!-- / .cols -->
 <div class="unit thumb_list">
@@ -83,29 +72,20 @@
 <h2 id="-">長いページを作るテスト</h2>
 <p>長いページを作ると、スクロールバーが出る。</p>
 <p>高さ調整のためのスクリプトの実行順序を見直すと直るのではないかな。</p>
-
-
 	</div></div>
 	<div class="cols-col cols-1of3"><div class="cols-pad">
 <h2>自分でコーディングする領域</h2>
 <p>HTMLコードを自分で書きます。</p>
 <p>HTMLエンティティ変換もされないので、<strong>自分で書きます</strong>。</p>
 <div style="background:#ddd; height:1200px;">
-</div>
-ただのテキスト。&lt;br /&gt;<br />HTMLエンティティ変換される、はず。<br /><br />- でも、markdownの書式は使えない、はず。<br /><br />あー、改行が反映されない、か。<br /><br />スクロール位置は？<br /><br />ちょうどいいじゃないですか。
-
-	</div></div>
+</div>ただのテキスト。&lt;br /&gt;<br />HTMLエンティティ変換される、はず。<br /><br />- でも、markdownの書式は使えない、はず。<br /><br />あー、改行が反映されない、か。<br /><br />スクロール位置は？<br /><br />ちょうどいいじゃないですか。	</div></div>
 	<div class="cols-col cols-1of3 cols-last"><div class="cols-pad">
 <p>宿題宿題。</p>
 
-<p>Yes, 宿題。</p>
-宿題やったかー？<br />＼(^o^)／<br /><br />やってるYo！ ＼(^o^)／
-<p>会社の宿題。</p>
+<p>Yes, 宿題。</p>宿題やったかー？<br />＼(^o^)／<br /><br />やってるYo！ ＼(^o^)／<p>会社の宿題。</p>
 <p>module はやっぱり、input の1つでは問題がある。不便。</p>
 <p>こいつは直しました。
 moduleフィールドを追加。<code>input type:module</code> は廃止。</p>
-
-
 	</div></div>
 </div><!-- / .cols -->
 <div class="unit">
@@ -113,12 +93,10 @@ moduleフィールドを追加。<code>input type:module</code> は廃止。</p>
 <ul>
 
 	<li>loop1: <p>テストテキストモジュールー！</p>
-
 	<ul>
 
 		<li>loop2: <p>テスト2
 うふろぉぉぉぉ</p>
-
 		<ul>
 
 		<li>loop3:
@@ -138,7 +116,6 @@ moduleフィールドを追加。<code>input type:module</code> は廃止。</p>
 		</li>
 
 		<li>loop2: <p>テスト2いいいおおおお</p>
-
 		<ul>
 
 		<li>loop3:
@@ -169,14 +146,12 @@ moduleフィールドを追加。<code>input type:module</code> は廃止。</p>
 	</li>
 
 	<li>loop1: <p>もじれつ書いてみますよ。</p>
-
 	<ul>
 
 	</ul>
 	</li>
 
 	<li>loop1: <p>テキストテキストー！</p>
-
 	<ul>
 
 	</ul>
@@ -188,7 +163,6 @@ moduleフィールドを追加。<code>input type:module</code> は廃止。</p>
 <p>まだ帰らなくてもいいでしょ。
 もっと遊びたいんだよ。</p>
 <p>いいじゃんかよーーーー！</p>
-
 <ul>
 
 <li><p>きたーーーー！</p>
@@ -204,35 +178,26 @@ moduleフィールドを追加。<code>input type:module</code> は廃止。</p>
 </li>
 
 </ul>
-
 <!-- /.unit --></div>
 <h2 id="-">いい感じになってまいりました</h2>
 <p>あけましておめでとうございます。</p>
-
 <h2 id="-">できました</h2>
 <p><code>px.utils.iterate()</code> が、オブジェクトも処理できるようになりました。</p>
-
 <div class="cols unit">
 	<div class="cols-col cols-1of3"><div class="cols-pad">
 <h2 id="-">長いページを作るテスト</h2>
 <p>長いページを作ると、スクロールバーが出る。</p>
 <p>高さ調整のためのスクリプトの実行順序を見直すと直るのではないかな。</p>
-
-
 	</div></div>
 	<div class="cols-col cols-1of3"><div class="cols-pad">
 <p>複雑な画面をつくろうと思うと・・・やっぱそこそこ大変ね。</p>
 <p>配列処理を毎回キックしてるので、リフレッシュに時間がかかる。重い。</p>
-
-
 	</div></div>
 	<div class="cols-col cols-1of3 cols-last"><div class="cols-pad">
 <p>したーーーのほうも再描画テスト。</p>
-
 <div>default2</div>
 <div>select2</div>
 <div>radio3</div>
-
 	</div></div>
 </div><!-- / .cols -->
 <div class="cols unit">
@@ -241,21 +206,16 @@ moduleフィールドを追加。<code>input type:module</code> は廃止。</p>
 <p>長いページを作ると、スクロールバーが出る。</p>
 <h3 id="-">コールバックチェーンがいまいち</h3>
 <p>高さ調整のためのスクリプトの実行順序を見直すと直るのではないかな。</p>
-
-
 	</div></div>
 	<div class="cols-col cols-1of2 cols-last"><div class="cols-pad">
 <h2 id="-">複雑になっちゃったなぁ</h2>
 <h3 id="-">なかなかさ、あれですな。</h3>
 <p>集中して構えないと手を入れられない感じ。むぅ。</p>
-
-
 	</div></div>
 </div><!-- / .cols -->
 <h2 id="-">長いページを作るテスト</h2>
 <p>長いページを作ると、スクロールバーが出る。</p>
 <p>高さ調整のためのスクリプトの実行順序を見直すと直るのではないかな。</p>
-
 <div class="dev-float-loop">
 	<ul>
 
@@ -287,44 +247,28 @@ moduleフィールドを追加。<code>input type:module</code> は廃止。</p>
 <h2 id="-">長いページを作るテスト</h2>
 <p>長いページを作ると、スクロールバーが出る。</p>
 <p>高さ調整のためのスクリプトの実行順序を見直すと直るのではないかな。</p>
-
-
 	</div></div>
 	<div class="cols-col cols-1of3"><div class="cols-pad">
-
 <img src="./index_files/resources/06f830991ad501926013ab2f9a52621b.png" alt="テストテキスト" /><p>↑これはpng</p>
-
-
 <a href="http://www.pxt.jp/"><img src="./index_files/resources/1e970f28b68cf1c3318431e73040c492.svg" alt="SVG画像を読み込む練習です。" /></a><p>↑これはSVG</p>
-
-
 	</div></div>
 	<div class="cols-col cols-1of3 cols-last"><div class="cols-pad">
-
-<a href="/plans/gui_spec/"><img src="./index_files/resources/father.png" alt="テスト" /></a>
-<img src="./index_files/resources/everyone.png" alt="pxt logo" /><p>マークダウン。</p>
-
-
+<a href="/plans/gui_spec/"><img src="./index_files/resources/father.png" alt="テスト" /></a><img src="./index_files/resources/everyone.png" alt="pxt logo" /><p>マークダウン。</p>
 	</div></div>
 </div><!-- / .cols -->
 <div class="cols unit">
 	<div class="cols-col cols-1of3"><div class="cols-pad">
-## JSON のフォーマットを、人にやさしくしてみました。<br /><br />テキストコード。
-
-	</div></div>
+## JSON のフォーマットを、人にやさしくしてみました。<br /><br />テキストコード。	</div></div>
 	<div class="cols-col cols-1of3"><div class="cols-pad">
 <h2 id="json-">JSON自体の差分を追えるようになりたい。</h2>
 <p>やっぱね、マークダウンが便利っす。</p>
 <p>大抵のことはこれで事足りる。</p>
 <p>ちゃんとマークアップできるし。コードもそこそこキレイにできる。</p>
-
-
 	</div></div>
 	<div class="cols-col cols-1of3 cols-last"><div class="cols-pad">
 <p>こうすると、なるらしい。</p>
 <pre><code>var jsonStr = JSON.stringify( {&quot;JSON&quot;:&quot;value&quot;}, null, 1 );
-</code></pre>
-<ul>
+</code></pre><ul>
 
 <li><p>増えたっていいじゃない？</p>
 </li>
@@ -337,31 +281,26 @@ moduleフィールドを追加。<code>input type:module</code> は廃止。</p>
 </li>
 
 </ul>
-
 	</div></div>
 </div><!-- / .cols -->
 <p class="finalized" style="color: #f00;">finalized</p><div>
     <p>custom1 field</p>
-<div style="background-color:#993; color:#fff; padding:1em;">あれ？</div>
-    <p>/custom1 field</p>
+<div style="background-color:#993; color:#fff; padding:1em;">あれ？</div>    <p>/custom1 field</p>
 </div>
 <p class="finalized" style="color: #00f;">finalized</p><div style="background:#f00;padding:10px;color:#fff;text-align:center;border:1px solid #fdd;">[ERROR] 未知のモジュールテンプレートです。<!-- .error --></div>
 <p>loopフィールドの多階層処理のテスト用モジュール</p>
 <ul>
 
 	<li>loop1: <p>まーくだうーん</p>
-
 	<ul>
 
 	</ul>
 	</li>
 
 	<li>loop1: <h2 id="md">md</h2>
-
 	<ul>
 
 		<li>loop2: <h2 id="md-layer-2">md layer 2</h2>
-
 		<ul>
 
 		<li>loop3:
@@ -385,44 +324,32 @@ moduleフィールドを追加。<code>input type:module</code> は廃止。</p>
 
 
 
-
 <div class="single-root-element--element">
 <p>isSingleRootElement が false になってはいけないパターン</p>
 <p>markdown</p>
-
 </div>
 
 
 
-
 <div class="single-root-element--element">
 <p>isSingleRootElement が false になってはいけないパターン</p>
 <p>markdown</p>
-
 </div>
-
 
 
 
 <div class="single-root-element--element">
 <p>isSingleRootElement が false になってはいけないパターン</p>
 <p>md</p>
-
 </div>
 
 </div>
-
 <div class="attention_box">
-
 	<p class="attention_box-heading">Heading</p>
 
-	
-</div><!-- /.attention_box -->
-
+	</div><!-- /.attention_box -->
 <div class="if">
 <p>うまく行ってますか？？？</p>
-
-
 <div class="if--additional-elements"><p>表示されていますか？</p>
 </div>
 
@@ -459,34 +386,30 @@ object(0) {
   [0]=> 
     object(1) {
     [body]=> 
-    string(72) "<p>これは、Twigテンプレートに組み込まれたloopフィールドの中で、外部のモジュールを呼び出すテストです。
+    string(71) "<p>これは、Twigテンプレートに組み込まれたloopフィールドの中で、外部のモジュールを呼び出すテストです。
 繰り返しの1件目。</p>
-
 "
   }
   [1]=> 
     object(1) {
     [body]=> 
-    string(72) "<p>これは、Twigテンプレートに組み込まれたloopフィールドの中で、外部のモジュールを呼び出すテストです。
+    string(71) "<p>これは、Twigテンプレートに組み込まれたloopフィールドの中で、外部のモジュールを呼び出すテストです。
 繰り返しの2件目。</p>
-
 "
   }
 }
  -->
 					<li role="presentation">object(1) {
   [body]=> 
-  string(72) "<p>これは、Twigテンプレートに組み込まれたloopフィールドの中で、外部のモジュールを呼び出すテストです。
+  string(71) "<p>これは、Twigテンプレートに組み込まれたloopフィールドの中で、外部のモジュールを呼び出すテストです。
 繰り返しの1件目。</p>
-
 "
 }
 </li>
 					<li role="presentation">object(1) {
   [body]=> 
-  string(72) "<p>これは、Twigテンプレートに組み込まれたloopフィールドの中で、外部のモジュールを呼び出すテストです。
+  string(71) "<p>これは、Twigテンプレートに組み込まれたloopフィールドの中で、外部のモジュールを呼び出すテストです。
 繰り返しの2件目。</p>
-
 "
 }
 </li>
@@ -523,8 +446,6 @@ object(0) {
 </div>
 <!-- module field -->
 
-
-
 <div style="border: 1px solid #f00;">
     <div>test</div>
 <!-- module field -->
@@ -532,18 +453,14 @@ object(0) {
 
 
 
-
 <!-- loop field -->
-
 
 
 <ul style="border: 1px solid #f00;">
     <li>test</li>
 
     <li>リスト</li>
-
 </ul>
-
 
 <!-- /.unit --></div>
 
@@ -553,3 +470,9 @@ object(0) {
 
 
 
+<div>
+    <p>mod</p>
+    <p>mod</p>
+
+    <p>mod</p>
+</div>
