--- a/tests/testdata/htdocs/test2/index.html
+++ b/tests/testdata/htdocs/test2/index.html
@@ -476,3 +476,9 @@ object(0) {
 
     <p>mod</p>
 </div>
+<div class="script-tag-test">
+    <p>このモジュールには、scriptタグが含まれています。</p>
+    <script>document.write('この文字列はJavaScriptによって描画されています');</script>
+    <p>これらがGUI処理に悪影響を及ぼさないよう、無害化される必要があります。</p>
+    <script>document.write('この文字列はJavaScriptによって描画されています');</script>
+</div>
