--- a/tests/testdata/htdocs/editpage/index.html
+++ b/tests/testdata/htdocs/editpage/index.html
@@ -492,6 +492,12 @@ object(0) {
 
     <p>mod</p>
 </div>
+<div class="script-tag-test">
+    <p>このモジュールには、scriptタグが含まれています。</p>
+    <script>document.write('この文字列はJavaScriptによって描画されています');</script>
+    <p>これらがGUI処理に悪影響を及ぼさないよう、無害化される必要があります。</p>
+    <script>document.write('この文字列はJavaScriptによって描画されています');</script>
+</div>
 
         </div><!-- /main -->
         <h2>secondly</h2>
