--- a/tests/testdata/htdocs/test2/index.canvas.html
+++ b/tests/testdata/htdocs/test2/index.canvas.html
@@ -385,38 +385,18 @@ object(0) {
 	<ul class="dropdown-menu" role="menu">
 		<!-- object(2) {
   [0]=> 
-    object(1) {
-    [body]=> 
-    string(778) "<p data-broccoli-instance-path="/fields.main@23/fields.Dropdown_loop@0/fields.body@0" data-broccoli-area-size-detection="deep" data-broccoli-module-name="Multi Text">これは、Twigテンプレートに組み込まれたloopフィールドの中で、外部のモジュールを呼び出すテストです。
-繰り返しの1件目。</p>
-<div data-broccoli-instance-path="/fields.main@23/fields.Dropdown_loop@0/fields.body@1" data-broccoli-mod-id="testMod1:dev/Dropdown" data-broccoli-is-appender="yes" style="height:auto;overflow:hidden;padding:13px;background-color:#f4f4ff;border:3px solid transparent;border-radius:5;font-family: &amp;YuGothic&amp;, &amp;Yu Gothic&amp;, Meiryo, &amp;Hiragino Kaku Gothic ProN&amp;, Verdana, sans-serif;font-size:14.4px;color:#000;text-align:center;box-sizing:border-box;clear:both;white-space:nowrap;margin:10px 0;">(+) Drop a module here</div>"
-  }
+  string(208) "<div data-broccoli-instance-path="/fields.main@23/fields.Dropdown_loop@0" data-broccoli-sub-mod-name="Dropdown_loop" data-broccoli-area-size-detection="shallow" data-broccoli-module-name="- Dropdown -"></div>"
   [1]=> 
-    object(1) {
-    [body]=> 
-    string(778) "<p data-broccoli-instance-path="/fields.main@23/fields.Dropdown_loop@1/fields.body@0" data-broccoli-area-size-detection="deep" data-broccoli-module-name="Multi Text">これは、Twigテンプレートに組み込まれたloopフィールドの中で、外部のモジュールを呼び出すテストです。
-繰り返しの2件目。</p>
-<div data-broccoli-instance-path="/fields.main@23/fields.Dropdown_loop@1/fields.body@1" data-broccoli-mod-id="testMod1:dev/Dropdown" data-broccoli-is-appender="yes" style="height:auto;overflow:hidden;padding:13px;background-color:#f4f4ff;border:3px solid transparent;border-radius:5;font-family: &amp;YuGothic&amp;, &amp;Yu Gothic&amp;, Meiryo, &amp;Hiragino Kaku Gothic ProN&amp;, Verdana, sans-serif;font-size:14.4px;color:#000;text-align:center;box-sizing:border-box;clear:both;white-space:nowrap;margin:10px 0;">(+) Drop a module here</div>"
-  }
+  string(208) "<div data-broccoli-instance-path="/fields.main@23/fields.Dropdown_loop@1" data-broccoli-sub-mod-name="Dropdown_loop" data-broccoli-area-size-detection="shallow" data-broccoli-module-name="- Dropdown -"></div>"
 }
  -->
-					<li role="presentation">object(1) {
-  [body]=> 
-  string(778) "<p data-broccoli-instance-path="/fields.main@23/fields.Dropdown_loop@0/fields.body@0" data-broccoli-area-size-detection="deep" data-broccoli-module-name="Multi Text">これは、Twigテンプレートに組み込まれたloopフィールドの中で、外部のモジュールを呼び出すテストです。
-繰り返しの1件目。</p>
-<div data-broccoli-instance-path="/fields.main@23/fields.Dropdown_loop@0/fields.body@1" data-broccoli-mod-id="testMod1:dev/Dropdown" data-broccoli-is-appender="yes" style="height:auto;overflow:hidden;padding:13px;background-color:#f4f4ff;border:3px solid transparent;border-radius:5;font-family: &amp;YuGothic&amp;, &amp;Yu Gothic&amp;, Meiryo, &amp;Hiragino Kaku Gothic ProN&amp;, Verdana, sans-serif;font-size:14.4px;color:#000;text-align:center;box-sizing:border-box;clear:both;white-space:nowrap;margin:10px 0;">(+) Drop a module here</div>"
-}
+					<li role="presentation">string(208) "<div data-broccoli-instance-path="/fields.main@23/fields.Dropdown_loop@0" data-broccoli-sub-mod-name="Dropdown_loop" data-broccoli-area-size-detection="shallow" data-broccoli-module-name="- Dropdown -"></div>"
 </li>
-					<li role="presentation">object(1) {
-  [body]=> 
-  string(778) "<p data-broccoli-instance-path="/fields.main@23/fields.Dropdown_loop@1/fields.body@0" data-broccoli-area-size-detection="deep" data-broccoli-module-name="Multi Text">これは、Twigテンプレートに組み込まれたloopフィールドの中で、外部のモジュールを呼び出すテストです。
-繰り返しの2件目。</p>
-<div data-broccoli-instance-path="/fields.main@23/fields.Dropdown_loop@1/fields.body@1" data-broccoli-mod-id="testMod1:dev/Dropdown" data-broccoli-is-appender="yes" style="height:auto;overflow:hidden;padding:13px;background-color:#f4f4ff;border:3px solid transparent;border-radius:5;font-family: &amp;YuGothic&amp;, &amp;Yu Gothic&amp;, Meiryo, &amp;Hiragino Kaku Gothic ProN&amp;, Verdana, sans-serif;font-size:14.4px;color:#000;text-align:center;box-sizing:border-box;clear:both;white-space:nowrap;margin:10px 0;">(+) Drop a module here</div>"
-}
+					<li role="presentation">string(208) "<div data-broccoli-instance-path="/fields.main@23/fields.Dropdown_loop@1" data-broccoli-sub-mod-name="Dropdown_loop" data-broccoli-area-size-detection="shallow" data-broccoli-module-name="- Dropdown -"></div>"
 </li>
 			</ul>
 </div><!-- / #attr text id -->
-<div data-broccoli-instance-path="/fields.main@24" data-broccoli-area-size-detection="shallow" data-broccoli-module-name="テキスト系のテスト"><div>テキスト入力しています。<br />&lt;b&gt;テキスト&lt;/b&gt;です。</div>
+<div data-broccoli-instance-path="/fields.main@24" data-broccoli-area-size-detection="shallow" data-broccoli-module-name="テキスト系のテスト"><div>テキスト入力しています。<br>&lt;b&gt;テキスト&lt;/b&gt;です。</div>
 <div>1行&lt;b&gt;テキスト&lt;/b&gt;です。</div>
 <div><p>HTML入力です。</p>
 <p>HTMLソースを入力しています。</p></div>
@@ -483,4 +463,10 @@ object(0) {
 <span style="color:#999;background-color:#ddd;font-size:10px;padding:0 1em;max-width:100%;overflow:hidden;white-space:nowrap;">(ダブルクリックしてテキストを編集してください)</span><span style="color:#999;background-color:#ddd;font-size:10px;padding:0 1em;max-width:100%;overflow:hidden;white-space:nowrap;">(ダブルクリックしてテキストを編集してください)</span><span style="color:#999;background-color:#ddd;font-size:10px;padding:0 1em;max-width:100%;overflow:hidden;white-space:nowrap;">(ダブルクリックしてテキストを編集してください)</span><span style="color:#999;background-color:#ddd;font-size:10px;padding:0 1em;max-width:100%;overflow:hidden;white-space:nowrap;">(ダブルクリックしてテキストを編集してください)</span><span style="color:#999;background-color:#ddd;font-size:10px;padding:0 1em;max-width:100%;overflow:hidden;white-space:nowrap;">(ダブルクリックしてテキストを編集してください)</span><span style="color:#999;background-color:#ddd;font-size:10px;padding:0 1em;max-width:100%;overflow:hidden;white-space:nowrap;">(ダブルクリックしてテキストを編集してください)</span><span style="color:#999;background-color:#ddd;font-size:10px;padding:0 1em;max-width:100%;overflow:hidden;white-space:nowrap;">(ダブルクリックしてテキストを編集してください)</span><span style="color:#999;background-color:#ddd;font-size:10px;padding:0 1em;max-width:100%;overflow:hidden;white-space:nowrap;">(ダブルクリックしてテキストを編集してください)</span><span style="color:#999;background-color:#ddd;font-size:10px;padding:0 1em;max-width:100%;overflow:hidden;white-space:nowrap;">(ダブルクリックしてテキストを編集してください)</span><span style="color:#999;background-color:#ddd;font-size:10px;padding:0 1em;max-width:100%;overflow:hidden;white-space:nowrap;">(ダブルクリックしてテキストを編集してください)</span>
 <span style="color:#999;background-color:#ddd;font-size:10px;padding:0 1em;max-width:100%;overflow:hidden;white-space:nowrap;">(ダブルクリックしてテキストを編集してください)</span><span style="color:#999;background-color:#ddd;font-size:10px;padding:0 1em;max-width:100%;overflow:hidden;white-space:nowrap;">(ダブルクリックしてテキストを編集してください)</span><span style="color:#999;background-color:#ddd;font-size:10px;padding:0 1em;max-width:100%;overflow:hidden;white-space:nowrap;">(ダブルクリックしてテキストを編集してください)</span>    <p>mod</p>
 <span style="color:#999;background-color:#ddd;font-size:10px;padding:0 1em;max-width:100%;overflow:hidden;white-space:nowrap;">(ダブルクリックしてテキストを編集してください)</span><span style="color:#999;background-color:#ddd;font-size:10px;padding:0 1em;max-width:100%;overflow:hidden;white-space:nowrap;">(ダブルクリックしてテキストを編集してください)</span><span style="color:#999;background-color:#ddd;font-size:10px;padding:0 1em;max-width:100%;overflow:hidden;white-space:nowrap;">(ダブルクリックしてテキストを編集してください)</span><span style="color:#999;background-color:#ddd;font-size:10px;padding:0 1em;max-width:100%;overflow:hidden;white-space:nowrap;">(ダブルクリックしてテキストを編集してください)</span></div>
-<div data-broccoli-instance-path="/fields.main@29" data-broccoli-mod-id="_sys/root" data-broccoli-is-appender="yes" style="height:auto;overflow:hidden;padding:15px;background-color:#eef;border:3px solid transparent;border-radius:5;font-family: &amp;YuGothic&amp;, &amp;Yu Gothic&amp;, Meiryo, &amp;Hiragino Kaku Gothic ProN&amp;, Verdana, sans-serif;font-size:16px;color:#000;text-align:center;box-sizing:border-box;clear:both;white-space:nowrap;margin:10px 0;">(+) Drop a module here</div></div>
+<div class="script-tag-test" data-broccoli-instance-path="/fields.main@29" data-broccoli-area-size-detection="shallow" data-broccoli-module-name="<script>タグを含むモジュールのテスト">
+    <p>このモジュールには、scriptタグが含まれています。</p>
+    <div style="color:#eee; background-color: #f00; border: 3px solid #f00; text-align: center;">script element</div>
+    <p>これらがGUI処理に悪影響を及ぼさないよう、無害化される必要があります。</p>
+    <div style="color:#eee; background-color: #f00; border: 3px solid #f00; text-align: center;">script element</div>
+</div>
+<div data-broccoli-instance-path="/fields.main@30" data-broccoli-mod-id="_sys/root" data-broccoli-is-appender="yes" style="height:auto;overflow:hidden;padding:15px;background-color:#eef;border:3px solid transparent;border-radius:5;font-family: &amp;YuGothic&amp;, &amp;Yu Gothic&amp;, Meiryo, &amp;Hiragino Kaku Gothic ProN&amp;, Verdana, sans-serif;font-size:16px;color:#000;text-align:center;box-sizing:border-box;clear:both;white-space:nowrap;margin:10px 0;">(+) Drop a module here</div></div>
