finalize.js の第3引数 `supply` に `data` を追加。モジュールに入力されたデータ構造にアクセスできるようになった。

--- a/tests/testdata/htdocs/test2/index.canvas.html
+++ b/tests/testdata/htdocs/test2/index.canvas.html
@@ -287,7 +287,7 @@ moduleフィールドを追加。<code>input type:module</code> は廃止。</p>
     <p>custom1 field</p>
 <div style="background-color:#993; color:#fff; padding:1em;">あれ？</div>    <p>/custom1 field</p>
 </div>
-<p class="finalized" style="color: #00f;">finalized</p></div><div style="background:#f00;padding:10px;color:#fff;text-align:center;border:1px solid #fdd;" data-broccoli-instance-path="/fields.main@16" data-broccoli-area-size-detection="shallow" data-broccoli-module-name="_sys/unknown">[ERROR] 未知のモジュールテンプレートです。<!-- .error --></div>
+ - {"modId":"testMod1:dev/custom1","fields":{"main":"あれ？"},"anchor":"","dec":""}<p class="finalized" style="color: #00f;">finalized</p></div><div style="background:#f00;padding:10px;color:#fff;text-align:center;border:1px solid #fdd;" data-broccoli-instance-path="/fields.main@16" data-broccoli-area-size-detection="shallow" data-broccoli-module-name="_sys/unknown">[ERROR] 未知のモジュールテンプレートです。<!-- .error --></div>
 <div data-broccoli-instance-path="/fields.main@17" data-broccoli-area-size-detection="shallow" data-broccoli-module-name="testMod1:parts/deeploop"><p>loopフィールドの多階層処理のテスト用モジュール</p>
 <ul>
 
