--- a/tests/testdata/htdocs/test2/index.html
+++ b/tests/testdata/htdocs/test2/index.html
@@ -350,8 +350,14 @@ moduleフィールドを追加。<code>input type:module</code> は廃止。</p>
 	</div><!-- /.attention_box -->
 <div class="if">
 <p>うまく行ってますか？？？</p>
-<div class="if--additional-elements"><p>表示されていますか？</p>
+<div class="if__additional-elements"><p>表示されていますか？</p>
 </div>
+
+
+
+
+<div class="if__base-text">baseText は入力されていません。</div>
+
 
 </div>
 <div class="twig_template">
